# rocket-learning

./: .env  Cargo.toml  README.md  Rocket.toml  build.rs
src/: main.rs  models.rs  schema.rs
src/controllers/: JWT_controller.rs  basic_controller.rs  mod.rs  student_controller.rs
src/models/: JWT_model.rs  basic_model.rs  database.rs  mod.rs  student_model.rs
src/routes/: JWT_route.rs  basic_route.rs  mod.rs  student_route.rs
src/views/: index.html  mod.rs
