[package]
name = "rocket-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }  # 添加 Rocket 依赖项，版本为 0.5.1，启用 json 特性
rocket_codegen = "0.5.1"  # 添加 Rocket 代码生成依赖项，版本为 0.5.1
serde = { version = "1.0.205", features = ["derive"] }  # 添加 Serde 依赖项，版本为 1.0.205，启用 derive 特性
serde_json = "1.0.122"  # 添加 Serde JSON 依赖项，版本为 1.0.122

jsonwebtoken = "9.3.0"  # 添加 JSON Web Token 依赖项，版本为 9.3.0

[profile.dev]
panic = "abort"  # 在开发配置中设置 panic 策略为 abort

[profile.release]
panic = "abort"  # 在发布配置中设置 panic 策略为 abort

