[package]
name = "rocket-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }  # 添加 Rocket 依赖项，版本为 0.5.1，启用 json 特性
rocket_codegen = "0.5.1"  # 添加 Rocket 代码生成依赖项，版本为 0.5.1
serde = { version = "1.0.209", features = ["derive"] }  # 添加 Serde 依赖项，版本为 1.0.205，启用 derive 特性
serde_json = "1.0.127"  # 添加 Serde JSON 依赖项，版本为 1.0.122

jsonwebtoken = "9.3.0"  # 添加 JSON Web Token 依赖项，版本为 9.3.0

rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }  # 添加 Rocket 数据库连接池依赖项，版本为 0.1.0，启用 diesel_postgres_pool 特性
diesel = { version = "2.2.3", features = ["postgres", "chrono"] }  # 添加 Diesel 依赖项，版本为 1.4.8，启用 postgres 和 chrono 特性
pq-sys = "0.6.1"    # 添加 pq-sys 依赖项，版本为 0.6.1，用于连接 PostgreSQL 数据库，需要与 diesel 版本匹配，否则会出现编译错误，这里使用 Diesel 2.2.2，所以选择 pq-sys 0.6.1

[profile.dev]
panic = "abort"  # 在开发配置中设置 panic 策略为 abort

[profile.release]
panic = "abort"  # 在发布配置中设置 panic 策略为 abort



